feat(health): Report failed inbound connector activations as DOWN (#650)